# catch_moveit

./: README.md  err.txt  log.txt
install/: local_setup.sh  setup.sh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.9
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.9
install/moveit_core/include/: moveit_butterworth_filter_export.h  moveit_collision_detection_bullet_export.h  moveit_collision_detection_export.h  moveit_collision_detection_fcl_export.h  moveit_collision_distance_field_export.h  moveit_kinematics_base_export.h  moveit_planning_scene_export.h  moveit_smoothing_base_export.h
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.9  libmoveit_butterworth_filter.so.2.5.9  libmoveit_collision_detection.so.2.5.9  libmoveit_collision_detection_bullet.so.2.5.9  libmoveit_collision_detection_fcl.so.2.5.9  libmoveit_collision_distance_field.so.2.5.9  libmoveit_constraint_samplers.so.2.5.9  libmoveit_distance_field.so.2.5.9  libmoveit_dynamics_solver.so.2.5.9  libmoveit_exceptions.so.2.5.9  libmoveit_kinematic_constraints.so.2.5.9  libmoveit_kinematics_metrics.so.2.5.9  libmoveit_planning_interface.so.2.5.9  libmoveit_planning_request_adapter.so.2.5.9  libmoveit_planning_scene.so.2.5.9  libmoveit_robot_model.so.2.5.9  libmoveit_robot_state.so.2.5.9  libmoveit_robot_trajectory.so.2.5.9  libmoveit_test_utils.so.2.5.9  libmoveit_trajectory_processing.so.2.5.9  (+1 more)
install/right_arm_ikfast_plugin/share/right_arm_ikfast_plugin/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  right_arm_ikfast_plugin_description.xml
log/: latest_build  latest_list
src/: QWEN.md  frames_2025-09-08_02.11.36.gv  frames_2025-09-08_02.23.21.gv  frames_2025-09-08_13.58.36.gv
src/0525_arm_description-20250707T055749Z-1-001/0525_arm_description/: CMakeLists.txt
src/0525_arm_description-20250707T055749Z-1-001/0525_arm_description/meshes/: link2_1.stl  link3_1.stl
src/0525_arm_description-20250707T055749Z-1-001/0525_arm_description/urdf/: 0525_arm.urdf  materials.urdf
src/blue_seiretu_description/: package.xml
src/catch_gazebo_control/: CMakeLists.txt
src/catch_gazebo_ros2_control/: CMakeLists.txt
src/catch_unity/: Assembly-CSharp.csproj  COLCON_IGNORE  catch.sln  catch_unity.sln
src/d415_rgb_depth_3d/: README.md  package.xml  setup.cfg  setup.py
src/dynamixel_controller_client/: setup.py
src/mavlink_controller_client/: package.xml  setup.cfg  setup.py
src/mtc_tutorial/: CMakeLists.txt
src/red_seiretu_description/: package.xml
src/robot_config/: CMakeCache.txt  CMakeLists.txt  REALTIME_CONTROL_README.md  frames_2025-08-01_15.55.04.gv  package.xml
src/robot_config/catch_gui/: index.html  package-lock.json  package.json
src/robot_config/catch_gui/src/: App.css  App.tsx
src/robot_config/config/: 0525_arm.ros2_control.xacro  0525_arm.srdf  0525_arm.urdf.xacro.bak  dual_arm.dae  dual_arm.rounded.dae  dual_arm.srdf  dual_arm.urdf.xacro  dual_arm_controllers.yaml  dual_arm_gazebo.urdf.xacro  dual_arm_gazebo_controllers.yaml  dual_arm_joint_limits.yaml  dual_arm_kinematics.yaml  dual_arm_moveit_controllers.yaml  dual_arm_ompl_planning.yaml  initial_positions.yaml  moveit.rviz  pilz_planning.yaml  pose_commands.yaml  ros2_controllers.yaml  stomp_planning.yaml  trajectory_library.yaml
src/robot_config/install/: local_setup.sh  setup.sh
src/robot_config/install/robot_config/lib/robot_config/: dual_arm_servo_controller  pose_command_publisher
src/robot_config/install/robot_config/share/robot_config/: package.sh
src/robot_config/install/robot_config/share/robot_config/config/: dual_arm.urdf  dual_arm.urdf.xacro  dual_arm_controllers.yaml  dual_arm_realtime_control.yaml  left_initial_positions.yaml  moveit_controllers.yaml  pose_commands.yaml  right_initial_positions.yaml
src/robot_config/install/robot_config/share/robot_config/launch/: dual_arm_demo.launch.py  move_group.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
src/robot_config/launch/: demo.launch.py  dual_arm_demo.launch.py  dual_arm_gazebo.launch.py  dual_arm_realtime_control.launch.py  move_group.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
src/robot_config/log/: latest_build
src/robot_config/path/: my_trajectory.yaml  trajectory_20250908_155613.yaml  trajectory_20250908_160041.yaml  trajectory_20250908_160508.yaml  trajectory_20250908_160515.yaml  trajectory_20250908_160521.yaml  trajectory_20250908_160527.yaml  trajectory_20250908_161515.yaml  trajectory_20250908_161516.yaml  trajectory_20250908_161848.yaml  trajectory_20250908_162054.yaml  trajectory_20250908_162104.yaml  trajectory_20250908_162105.yaml  trajectory_20250908_162108.yaml  trajectory_20250908_162120.yaml  trajectory_20250908_162642.yaml  trajectory_20250908_162708.yaml  trajectory_20250908_162712.yaml  trajectory_20250908_162719.yaml  trajectory_20250908_162733.yaml  trajectory_20250908_162743.yaml  trajectory_20250908_162759.yaml  trajectory_20250908_162803.yaml  trajectory_20250908_162807.yaml  trajectory_20250908_162811.yaml  trajectory_20250908_162814.yaml  trajectory_20250908_163048.yaml  trajectory_20250908_163947.yaml  trajectory_20250908_163957.yaml  trajectory_20250908_164829.yaml  trajectory_20250908_165732.yaml  trajectory_20250908_165737.yaml  trajectory_20250908_165739.yaml  trajectory_20250908_165749.yaml  trajectory_20250908_165755.yaml  trajectory_20250908_165758.yaml  trajectory_20250908_165806.yaml  trajectory_20250908_165812.yaml  trajectory_20250908_165815.yaml  trajectory_20250908_165816.yaml  (+102 more)
src/robot_config/scripts/: test_realtime_control.sh
src/robot_config/src/: dual_arm_cartesian_control.cpp  dual_arm_realtime_control.cpp  dual_arm_servo_controller.cpp  dual_arm_trajectory_recorder.cpp  joystick_servo.cpp  move_to_pose_cpp.cpp  move_to_pose_dual_cpp.cpp  pose_command_publisher.cpp  publish_collision_mesh.py  realtime_arm_control.py  set_initial_pose.py  set_initial_pose_fixed.py  simple_dual_arm_control.cpp  simple_trajectory_recorder.cpp
src/robot_config/worlds/: field.world
(+4525 files in other folders)
