<?xml version="1.0"?>
<package format="2">
  <name>right_arm_ikfast_plugin</name>
  <version>0.0.0</version>
  <description>The right_arm_ikfast_plugin package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>